@@ -1,10 +1,12 @@
 define(['dojo/_base/declare',
         'dojo/_base/array',
+        'dojo/dom-construct',
         'dijit/layout/ContentPane',
         'dojo/dnd/Source',
-        'dojo/fx/easing'
+        'dojo/fx/easing',
+        'dijit/form/TextBox'
        ],
-       function( declare, array, ContentPane, dndSource, animationEasing ) {
+       function( declare, array, dom, ContentPane, dndSource, animationEasing, dijitTextBox ) {
 return declare( 'JBrowse.View.TrackList.Simple', null,
 
     /** @lends JBrowse.View.TrackList.Simple.prototype */
@@ -105,7 +107,7 @@ return declare( 'JBrowse.View.TrackList.Simple', null,
         var leftPane = dojo.create(
             'div',
             { id: 'trackPane',
-              style: { width: '10em' }
+              style: { width: '12em' }
             },
             renderTo
         );
@@ -113,7 +115,7 @@ return declare( 'JBrowse.View.TrackList.Simple', null,
         //splitter on left side
         var leftWidget = new ContentPane({region: "left", splitter: true}, leftPane);
 
-        var trackListDiv = dojo.create(
+        var trackListDiv = this.div = dojo.create(
             'div',
             { id: 'tracksAvail',
               className: 'container handles',
@@ -123,6 +125,57 @@ return declare( 'JBrowse.View.TrackList.Simple', null,
             },
             leftPane
         );
+
+       this.textFilterDiv = dom.create( 'div', {
+                                            className: 'textfilter',
+                                            style: {
+                                                width: '100%',
+                                                position: 'relative',
+                                                overflow: 'hidden'
+                                            }
+                                        }, trackListDiv );
+       this.textFilterInput = dom.create(
+            'input',
+            { type: 'text',
+              style: {
+                  paddingLeft: '18px',
+                  height: '16px',
+                  width: '80%'
+              },
+              placeholder: 'filter by text',
+              onkeypress: dojo.hitch( this, function( evt ) {
+                  if( this.textFilterTimeout )
+                      window.clearTimeout( this.textFilterTimeout );
+                  this.textFilterTimeout = window.setTimeout(
+                      dojo.hitch( this, function() {
+                                      this._updateTextFilterControl();
+                                      this._textFilter( this.textFilterInput.value );
+                                  }),
+                      500
+                  );
+                  this._updateTextFilterControl();
+
+                  evt.stopPropagation();
+              })
+            },
+            dom.create('div',{ style: { overflow: 'show'} },this.textFilterDiv)
+        );
+
+        // make a "clear" button for the text filtering input
+        this.textFilterClearButton = dom.create('div', {
+            className: 'jbrowseIconCancel',
+            onclick: dojo.hitch( this, function() {
+                this._clearTextFilterControl();
+                this._textFilter( this.textFilterInput.value );
+            }),
+            style: {
+                position: 'absolute',
+                left: '4px',
+                top: '6px'
+            }
+        }, this.textFilterDiv );
+
+        this._updateTextFilterControl();
 
         this.trackListWidget = new dndSource(
             trackListDiv,
@@ -156,6 +209,45 @@ return declare( 'JBrowse.View.TrackList.Simple', null,
         );
 
         return trackListDiv;
+    },
+
+    _textFilter: function( text ) {
+        if( text && /\S/.test(text) ) {
+
+            text = text.toLowerCase();
+
+            dojo.query( '.tracklist-label', this.div )
+                .forEach( function( labelNode, i ) {
+                    if( labelNode.innerHTML.toLowerCase().indexOf( text ) != -1 ) {
+                        dojo.removeClass( labelNode, 'collapsed');
+                    } else {
+                        dojo.addClass( labelNode, 'collapsed');
+                    }
+                 });
+        } else {
+            dojo.query( '.tracklist-label', this.div )
+                .removeClass('collapsed');
+        }
+    },
+
+   /**
+    * Clear the text filter control input.
+    * @private
+    */
+    _clearTextFilterControl: function() {
+        this.textFilterInput.value = '';
+        this._updateTextFilterControl();
+    },
+    /**
+     * Update the display of the text filter control based on whether
+     * it has any text in it.
+     * @private
+     */
+    _updateTextFilterControl: function() {
+        if( this.textFilterInput.value.length )
+            dojo.removeClass( this.textFilterDiv, 'dijitDisabled' );
+        else
+            dojo.addClass( this.textFilterDiv, 'dijitDisabled' );
     },
 
     /**
